k8s/devops-tools/jenkins.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devops-tools
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: jenkins-server
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32000
  # externalIPs:
  #   - 172.17.0.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      securityContext:
            fsGroup: 1000
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: ghcr.io/dos09-onl/jenkins-master-w-docker:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "2000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          # resources: {}
          # env:
          # - name: JENKINS_OPTS
          #   value: --prefix=/jenkins
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
      imagePullSecrets:
        - name: dockerconfigjson
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/app-root: /
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#   name: jenkins
#   namespace: devops-tools
#   labels:
#     app: jenkins-server
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Exact
#         path: /jenkins
#         backend:
#           service:
#             name: jenkins-service
#             port:
#               number: 8080
# ---
