k8s/devops-tools/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  labels:
    app: jenkins-server
  namespace: devops-tools
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: /jenkins/
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
---
